--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
             <div class="con">
             	<img src="images/lxwm.png" />
             	<dl>
-                	<dt>地址：</dt><dd>广州市白云区江高镇泉溪工业区88号</dd>
-                    <dt>手机：</dt><dd>18928798558 李小姐</dd>
-                    <dt>手机：</dt><dd>18928823278</dd>
-                    <dt>电话：</dt><dd>020-36894352</dd>
+                	<dt>地址：</dt><dd>XX市XX路XX号</dd>
+                    <dt>手机：</dt><dd>12345678901</dd>
+                    <dt>手机：</dt><dd>12345678901</dd>
+                    <dt>电话：</dt><dd>021-12345678</dd>
                 </dl>
             </div>
         </div>
@@ -233,7 +233,7 @@
           <div class="clear"></div>
       </ul>
 	</div>
-    <div class="ba"><div class="inner"><span class="left">版权所有2015深圳市绿之宇科技有限公司 all rights reserved. 粤icp备 0000000号</span><span class="right"><a href="#">联系我们</a>  |   <a href="#">网站地图</a></span></div></div>
+    <div class="ba"><div class="inner"><span class="right"><a href="#">联系我们</a>  |   <a href="#">网站地图</a></span></div></div>
 </div>
 </body>
 </html>
