--- a/product.html
+++ b/product.html
@@ -195,7 +195,7 @@
           <div class="clear"></div>
       </ul>
 	</div>
-    <div class="ba"><div class="inner"><span class="left">版权所有2015深圳市绿之宇科技有限公司 all rights reserved. 粤icp备 0000000号</span><span class="right"><a href="#">联系我们</a>  |   <a href="#">网站地图</a></span></div></div>
+    <div class="ba"><div class="inner"><span class="right"><a href="#">联系我们</a>  |   <a href="#">网站地图</a></span></div></div>
 </div>
 </body>
 </html>
